# photonear

./: .gitignore  CMakeLists.txt  main.cpp
src/: Photonear.cpp  Photonear.h
src/common/: KDTree.h  Ray.cpp  Ray.h  Transform.cpp  Transform.h  vec3_type.h
src/component/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Hittable.cpp  Hittable.h  MaskedComponent.cpp  MaskedComponent.h  Material.cpp  Material.h  RootTransformComponent.cpp  RootTransformComponent.h  Shape.cpp  Shape.h  TransformComponent.cpp  TransformComponent.h
src/component/hittable/: Sphere.cpp  Sphere.h
src/component/material/: ConductorMaterial.cpp  ConductorMaterial.h  DielectricMaterial.cpp  DielectricMaterial.h  DiffuseMaterial.cpp  DiffuseMaterial.h  DirectedEmissiveMaterial.cpp  DirectedEmissiveMaterial.h  DirectedLightMaterial.cpp  DirectedLightMaterial.h  EmissiveMaterial.cpp  EmissiveMaterial.h  LightMaterial.cpp  LightMaterial.h  Material.cpp  Material.h  PositionnedEmissiveMaterial.cpp  PositionnedEmissiveMaterial.h  PositionnedEmissiveMaterial.h.cpp  PositionnedLightMaterial.cpp  PositionnedLightMaterial.h  RefractiveMaterial.cpp  RefractiveMaterial.h  SpotEmissiveMaterial.cpp  SpotEmissiveMaterial.h  SpotLightMaterial.cpp  SpotLightMaterial.h
src/component/shape/: Quad.cpp  Quad.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/ray_tracing/: Photon.cpp  Photon.h  PhotonHit.cpp  PhotonHit.h  PhotonMap.cpp  PhotonMap.h  PhotonMapper.cpp  PhotonMapper.h  Ray.cpp  Ray.h  RayCastHit.cpp  RayCastHit.h  RayTraceHit.cpp  RayTraceHit.h  RayTracer.cpp  RayTracer.h
src/scene/: Scene.cpp  Scene.h  SceneEnvironment.cpp  SceneEnvironment.h  SceneGraph.cpp  SceneGraph.h
src/scene/example/: CornellBox.cpp  CornellBox.h  DepthScene.cpp  DepthScene.h  PhotonMapTestScene.cpp  PhotonMapTestScene.h  QuadScene.cpp  QuadScene.h
src/scene/node/: AbstractNode.cpp  AbstractNode.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  NodeGame.cpp  NodeGame.h  RootNode.cpp  RootNode.h
src/shader/: depth_fragment_shader.glsl  depth_vertex_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
src/shader_manager/: Light.cpp  Light.h  Shaders.cpp  Shaders.h  ShadersBufferManager.cpp  ShadersBufferManager.h  ShadersDataManager.cpp  ShadersDataManager.h  ShadowMap.cpp  ShadowMap.h  ShadowMapShaders.cpp  ShadowMapShaders.h  TextureManager.cpp  TextureManager.h  VertFragShaders.cpp  VertFragShaders.h
src/texture/: Texture.cpp  Texture.h  TextureColor.cpp  TextureColor.h  TextureImage.cpp  TextureImage.h
src/utils/: printer.cpp  printer.h
